c2o sku catalogue import

--- a/templates/orders.html
+++ b/templates/orders.html
@@ -2,9 +2,9 @@
 {% load i18n %}
 {% block main %}
 
-     <h1 class="page-header">Catalogue</h1>
+     <h1 class="page-header">Orders</h1>
 
-      <h2 class="sub-header">C2O Products</h2>
+      <h2 class="sub-header">New orders</h2>
       <div class="table-responsive">
         <table class="table table-striped">
           <thead>
