--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,8 @@
     <title>Lumacart Console</title>
 
     <!-- Bootstrap -->
-    <link href="/static/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    {% block css %}{% endblock %}
   </head>
   <body>
 
