--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,44 @@
 {% extends "layout.html" %}
 {% load i18n %}
+
+{% block css %}
+     <link href="/static/css/main.css" rel="stylesheet">
+{% endblock css %}
+
 {% block body %}
-    menu <br/>
-    {% block main %}{% endblock %}
+
+     <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Lumacart Console</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/admin">Admin</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+          <ul class="nav nav-sidebar">
+            <li><a href="#">Import C2O catalogue</a></li>
+            <li><a href="#">Orders</a></li>
+          </ul>
+        </div>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            {% block main %}{% endblock %}
+        </div>
+      </div>
+    </div>
+
+
 {% endblock body %}
