--- a/templates/menu.html
+++ b/templates/menu.html
@@ -20,7 +20,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/admin">Admin</a></li>
+            <li><a href="/admin" target="_blank">Admin</a></li>
           </ul>
         </div>
       </div>
@@ -30,8 +30,8 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="#">Import C2O catalogue</a></li>
-            <li><a href="#">Orders</a></li>
+            <li><a href="/catalogue/import_c2o/">Import C2O catalogue</a></li>
+            <li><a href="/orders/new_c2o_orders/">New C2O Orders</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
