--- a/templates/orders.html
+++ b/templates/orders.html
@@ -2,28 +2,70 @@
 {% load i18n %}
 {% block main %}
 
+
+    <!--
+     luma_id = models.CharField(max_length = 255, blank = False, unique = True)
+    c2o_id = models.CharField(max_length = 255, blank = True)
+    creation_date = models.DateTimeField(blank = False, auto_now_add=True)
+    last_update = models.DateTimeField(blank = True, auto_now=True)
+    request_json = models.TextField(blank = True)
+    status = models.CharField(max_length = 30, default = STATUS_NEW, blank = False, choices = [(STATUS_NEW, STATUS_NEW),
+                                                                                          (STATUS_SENT, STATUS_SENT),
+                                                                                          (STATUS_INVALID, STATUS_INVALID),
+                                                                                          (STATUS_DISPATCHED, STATUS_DISPATCHED) ])
+    notes = models.TextField(blank = True)
+    delivery_method = models.CharField(max_length = 30, default = DELIVERY_STANDARD, blank = False, choices = [(DELIVERY_STANDARD, DELIVERY_STANDARD),
+                                                                                          (DELIVERY_4DAY, DELIVERY_4DAY),
+                                                                                          (DELIVERY_EXPRESS, DELIVERY_EXPRESS)])
+    individual_bags = models.BooleanField(default = False)
+    customer_name	= models.CharField(max_length = 255, blank = False)
+    customer_email	= models.CharField(max_length = 255, blank = False)
+    customer_telephone	= models.CharField(max_length = 255, blank = True)
+    address_delivery_name	= models.CharField(max_length = 255, blank = True)
+    address_company_name	= models.CharField(max_length = 255, blank = True)
+    address_address_line_1	= models.CharField(max_length = 255, blank = False)
+    address_address_line_2	= models.CharField(max_length = 255, blank = True)
+    address_city	 = models.CharField(max_length = 255, blank = False)
+    address_county	 = models.CharField(max_length = 255, blank = True)
+    address_postcode = models.CharField(max_length = 255, blank = False)
+    address_country
+
+    -->
+
      <h1 class="page-header">Orders</h1>
 
       <h2 class="sub-header">New orders</h2>
+
       <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table table-striped table-hover">
           <thead>
-            <tr>
-              <th>#</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
-            </tr>
+                <tr>
+                    <th>ID</th>
+                    <th>C2O ID</th>
+                    <th>Created</th>
+                    <th>Status</th>
+                    <th>Customer</th>
+                    <th>Email</th>
+                    <th>Address</th>
+                    <th>Country</th>
+                    <th>Last update</th>
+                    <th></th>
+                </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>1,001</td>
-              <td>Lorem</td>
-              <td>ipsum</td>
-              <td>dolor</td>
-              <td>sit</td>
-            </tr>
+          {% for order in orders %}
+                <tr>
+                    <td>{{ order.luma_id }}</td>
+                    <td>{{ order.c2o_id }}</td>
+                    <td>{{ order.creation_date }}</td>
+                    <td>{{ order.status }}</td>
+                    <td>{{ order.customer_email }}</td>
+                    <td>{{ order.address_address_line_1 }} {{ order.address_city }} {{ order.address_postcode }}</td>
+                    <td>{{ order.address_country }}</td>
+                    <td>{{ order.last_update }}</td>
+                    <td></td>
+                </tr>
+          {% endfor %}
           </tbody>
         </table>
       </div>
