orders status fetch script

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -31,7 +31,7 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li><a href="/catalogue/import_c2o/">Import C2O catalogue</a></li>
-            <li><a href="/orders/new_c2o_orders/">New C2O Orders</a></li>
+            <li><a href="/orders/new_c2o_orders/">Current C2O Orders</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
