--- a/templates/orders.html
+++ b/templates/orders.html
@@ -20,6 +20,7 @@
                     <th>C2OID</th>
                     <th>Created</th>
                     <th>Status</th>
+                    <th>C2O Status</th>
                     <th>Customer</th>
                     <th>Email</th>
                     <th>Address</th>
@@ -30,11 +31,13 @@
           </thead>
           <tbody>
           {% for order in orders %}
-                <tr>
+                <tr class='{{ order.has_issues|yesno:"danger,," }}'>
                     <td>{{ order.luma_id }}</td>
                     <td>{{ order.c2o_id }}</td>
                     <td>{{ order.creation_date }}</td>
                     <td>{{ order.status }}</td>
+                    <td>{{ order.c2o_status }}</td>
+                    <td>{{ order.customer_name }}</td>
                     <td>{{ order.customer_email }}</td>
                     <td>{{ order.address_address_line_1 }} {{ order.address_address_line_2 }}<br/>{{ order.address_city }} {{ order.address_postcode }}</td>
                     <td>{{ order.address_country }}</td>
@@ -58,6 +61,43 @@
                             </form>
                         {% endif %}
                     </td>
+                </tr>
+          {% endfor %}
+          </tbody>
+        </table>
+      </div>
+
+    <h2 class="sub-header">Awaiting orders</h2>
+
+      <div class="table-responsive">
+        <table class="table table-striped table-hover">
+          <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>C2OID</th>
+                    <th>Created</th>
+                    <th>Status</th>
+                    <th>C2O Status</th>
+                    <th>Customer</th>
+                    <th>Email</th>
+                    <th>Address</th>
+                    <th>Country</th>
+                    <th>Last update</th>
+                </tr>
+          </thead>
+          <tbody>
+          {% for order in sent_orders %}
+                <tr>
+                    <td>{{ order.luma_id }}</td>
+                    <td>{{ order.c2o_id }}</td>
+                    <td>{{ order.creation_date }}</td>
+                    <td>{{ order.status }}</td>
+                    <td>{{ order.c2o_status }}</td>
+                    <td>{{ order.customer_name }}</td>
+                    <td>{{ order.customer_email }}</td>
+                    <td>{{ order.address_address_line_1 }} {{ order.address_address_line_2 }}<br/>{{ order.address_city }} {{ order.address_postcode }}</td>
+                    <td>{{ order.address_country }}</td>
+                    <td>{{ order.last_update }}</td>
                 </tr>
           {% endfor %}
           </tbody>
